--- a/07_generate_readdf_for_regions.ipynb
+++ b/07_generate_readdf_for_regions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -16,63 +16,80 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2332/2332 [57:02<00:00,  1.47s/it]  \n"
+      "  0%|          | 1/5963 [00:01<3:01:00,  1.82s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on input cancer class Gastric\n"
+      "File K0657R1.read_classification.csv already exists\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2346/2346 [49:30<00:00,  1.27s/it] \n"
+      "  0%|          | 3/5963 [00:02<1:07:40,  1.47it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on input cancer class Lung\n"
+      "File KABR51.read_classification.csv already exists\n",
+      "File KZAK09.read_classification.csv already exists\n",
+      "File KZAB12.read_classification.csv already exists\n",
+      "File KABQ61.read_classification.csv already exists\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2416/2416 [52:02<00:00,  1.29s/it]  \n"
+      "  0%|          | 9/5963 [00:05<54:33,  1.82it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on input cancer class Breast\n"
+      "File KABA08.read_classification.csv already exists\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2579/2579 [53:47<00:00,  1.25s/it]  \n"
+      "  0%|          | 13/5963 [00:08<1:13:17,  1.35it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on input cancer class CRC\n"
+      "File KABT01.read_classification.csv already exists\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2439/2439 [50:13<00:00,  1.24s/it]  \n"
+      "  0%|          | 21/5963 [00:16<1:48:51,  1.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File K0AO47.read_classification.csv already exists\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 23/5963 [00:18<1:36:51,  1.02it/s]"
      ]
     }
    ],
@@ -117,7 +134,9 @@
     "\n",
     "    metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
     "    metadata = metadata[metadata[\"Label\"].isin([input_cancer_class, \"Control\"])]\n",
-    "    metadata = metadata[metadata[\"Set\"] == \"train\"]\n",
+    "\n",
+    "    ##### generate readdf for all samples, not only training samples\n",
+    "    # metadata = metadata[metadata[\"Set\"] == \"train\"]\n",
     "\n",
     "    metadata.head()\n",
     "    metadata.shape\n",
@@ -141,16 +160,19 @@
     "    all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.sorted.csv\") if item.name.replace(\".sorted.csv\", \"\") in metadata[\"SampleID\"].values]\n",
     "\n",
     "    for file in tqdm(all_read_files):\n",
-    "        tmpdf = pd.read_csv(file, index_col = [0])\n",
+    "        if os.path.isfile(os.path.join(path_to_07_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\"))) == False:\n",
+    "            tmpdf = pd.read_csv(file, index_col = [0])\n",
     "\n",
-    "        \n",
-    "        tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
-    "        tmpdf = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"]\n",
+    "            \n",
+    "            tmpdf[\"read_overlap_rate\"] = tmpdf[[\"start\", \"seq\", \"region\"]].apply(lambda x: check_read_inside_region(x[0], x[1], x[2]), axis = 1)\n",
+    "            tmpdf = tmpdf[tmpdf[\"read_overlap_rate\"] == \"in\"]\n",
     "\n",
-    "        tmpdf[\"read_classification\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "            tmpdf[\"read_classification\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
     "\n",
-    "        countdf = tmpdf.groupby([\"region\", \"read_classification\"]).size().unstack().fillna(0)\n",
-    "        tmpdf.to_csv(os.path.join(path_to_07_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n"
+    "            countdf = tmpdf.groupby([\"region\", \"read_classification\"]).size().unstack().fillna(0)\n",
+    "            tmpdf.to_csv(os.path.join(path_to_07_output, file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n",
+    "        else:\n",
+    "            print(\"File {} already exists\".format(file.name.replace(\".sorted.csv\", \".read_classification.csv\")))\n"
    ]
   }
  ],
