--- a/TF02_analysis_pan_cancer.ipynb
+++ b/TF02_analysis_pan_cancer.ipynb
@@ -709,130 +709,130 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_7360c_row0_col4, #T_7360c_row0_col5, #T_7360c_row0_col9, #T_7360c_row1_col6, #T_7360c_row1_col7, #T_7360c_row1_col8, #T_7360c_row2_col6, #T_7360c_row2_col7, #T_7360c_row2_col8, #T_7360c_row2_col10, #T_7360c_row3_col4, #T_7360c_row3_col5, #T_7360c_row3_col9, #T_7360c_row4_col6, #T_7360c_row4_col7, #T_7360c_row4_col8, #T_7360c_row5_col6, #T_7360c_row5_col7, #T_7360c_row5_col8, #T_7360c_row5_col10 {\n",
+       "#T_de4b9_row0_col4, #T_de4b9_row0_col5, #T_de4b9_row0_col9, #T_de4b9_row1_col6, #T_de4b9_row1_col7, #T_de4b9_row1_col8, #T_de4b9_row2_col6, #T_de4b9_row2_col7, #T_de4b9_row2_col8, #T_de4b9_row2_col10, #T_de4b9_row3_col4, #T_de4b9_row3_col5, #T_de4b9_row3_col9, #T_de4b9_row4_col6, #T_de4b9_row4_col7, #T_de4b9_row4_col8, #T_de4b9_row5_col6, #T_de4b9_row5_col7, #T_de4b9_row5_col8, #T_de4b9_row5_col10 {\n",
        "  background-color: #fff7fb;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_7360c_row0_col6, #T_7360c_row0_col7, #T_7360c_row0_col8, #T_7360c_row0_col10, #T_7360c_row1_col4, #T_7360c_row1_col5, #T_7360c_row2_col4, #T_7360c_row2_col5, #T_7360c_row2_col9, #T_7360c_row3_col6, #T_7360c_row3_col7, #T_7360c_row3_col8, #T_7360c_row3_col10, #T_7360c_row4_col4, #T_7360c_row4_col5, #T_7360c_row5_col4, #T_7360c_row5_col5, #T_7360c_row5_col9 {\n",
+       "#T_de4b9_row0_col6, #T_de4b9_row0_col7, #T_de4b9_row0_col8, #T_de4b9_row0_col10, #T_de4b9_row1_col4, #T_de4b9_row1_col5, #T_de4b9_row2_col4, #T_de4b9_row2_col5, #T_de4b9_row2_col9, #T_de4b9_row3_col6, #T_de4b9_row3_col7, #T_de4b9_row3_col8, #T_de4b9_row3_col10, #T_de4b9_row4_col4, #T_de4b9_row4_col5, #T_de4b9_row5_col4, #T_de4b9_row5_col5, #T_de4b9_row5_col9 {\n",
        "  background-color: #023858;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_7360c_row1_col9, #T_7360c_row4_col9 {\n",
+       "#T_de4b9_row1_col9, #T_de4b9_row4_col9 {\n",
        "  background-color: #f5eef6;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_7360c_row1_col10, #T_7360c_row4_col10 {\n",
+       "#T_de4b9_row1_col10, #T_de4b9_row4_col10 {\n",
        "  background-color: #034267;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_7360c\">\n",
+       "<table id=\"T_de4b9\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_7360c_level0_col0\" class=\"col_heading level0 col0\" >Candi feature</th>\n",
-       "      <th id=\"T_7360c_level0_col1\" class=\"col_heading level0 col1\" >Mode</th>\n",
-       "      <th id=\"T_7360c_level0_col2\" class=\"col_heading level0 col2\" >Class</th>\n",
-       "      <th id=\"T_7360c_level0_col3\" class=\"col_heading level0 col3\" >Model</th>\n",
-       "      <th id=\"T_7360c_level0_col4\" class=\"col_heading level0 col4\" >AUC_LOD</th>\n",
-       "      <th id=\"T_7360c_level0_col5\" class=\"col_heading level0 col5\" >Sens (LOD)</th>\n",
-       "      <th id=\"T_7360c_level0_col6\" class=\"col_heading level0 col6\" >Spec (LOD)</th>\n",
-       "      <th id=\"T_7360c_level0_col7\" class=\"col_heading level0 col7\" >Pearson corr (LOD)</th>\n",
-       "      <th id=\"T_7360c_level0_col8\" class=\"col_heading level0 col8\" >Threshold LOD</th>\n",
-       "      <th id=\"T_7360c_level0_col9\" class=\"col_heading level0 col9\" >Sens (REPORT4)</th>\n",
-       "      <th id=\"T_7360c_level0_col10\" class=\"col_heading level0 col10\" >Spec (REPORT4)</th>\n",
+       "      <th id=\"T_de4b9_level0_col0\" class=\"col_heading level0 col0\" >Candi feature</th>\n",
+       "      <th id=\"T_de4b9_level0_col1\" class=\"col_heading level0 col1\" >Mode</th>\n",
+       "      <th id=\"T_de4b9_level0_col2\" class=\"col_heading level0 col2\" >Class</th>\n",
+       "      <th id=\"T_de4b9_level0_col3\" class=\"col_heading level0 col3\" >Model</th>\n",
+       "      <th id=\"T_de4b9_level0_col4\" class=\"col_heading level0 col4\" >AUC_LOD</th>\n",
+       "      <th id=\"T_de4b9_level0_col5\" class=\"col_heading level0 col5\" >Sens (LOD)</th>\n",
+       "      <th id=\"T_de4b9_level0_col6\" class=\"col_heading level0 col6\" >Spec (LOD)</th>\n",
+       "      <th id=\"T_de4b9_level0_col7\" class=\"col_heading level0 col7\" >Pearson corr (LOD)</th>\n",
+       "      <th id=\"T_de4b9_level0_col8\" class=\"col_heading level0 col8\" >Threshold LOD</th>\n",
+       "      <th id=\"T_de4b9_level0_col9\" class=\"col_heading level0 col9\" >Sens (REPORT4)</th>\n",
+       "      <th id=\"T_de4b9_level0_col10\" class=\"col_heading level0 col10\" >Spec (REPORT4)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_7360c_row0_col0\" class=\"data row0 col0\" >ratio_raw</td>\n",
-       "      <td id=\"T_7360c_row0_col1\" class=\"data row0 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row0_col2\" class=\"data row0 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row0_col3\" class=\"data row0 col3\" >LR</td>\n",
-       "      <td id=\"T_7360c_row0_col4\" class=\"data row0 col4\" >0.705552</td>\n",
-       "      <td id=\"T_7360c_row0_col5\" class=\"data row0 col5\" >0.423077</td>\n",
-       "      <td id=\"T_7360c_row0_col6\" class=\"data row0 col6\" >0.961905</td>\n",
-       "      <td id=\"T_7360c_row0_col7\" class=\"data row0 col7\" >0.748444</td>\n",
-       "      <td id=\"T_7360c_row0_col8\" class=\"data row0 col8\" >0.052167</td>\n",
-       "      <td id=\"T_7360c_row0_col9\" class=\"data row0 col9\" >0.187910</td>\n",
-       "      <td id=\"T_7360c_row0_col10\" class=\"data row0 col10\" >0.941501</td>\n",
+       "      <th id=\"T_de4b9_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_de4b9_row0_col0\" class=\"data row0 col0\" >ratio_raw</td>\n",
+       "      <td id=\"T_de4b9_row0_col1\" class=\"data row0 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row0_col2\" class=\"data row0 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row0_col3\" class=\"data row0 col3\" >LR</td>\n",
+       "      <td id=\"T_de4b9_row0_col4\" class=\"data row0 col4\" >0.705552</td>\n",
+       "      <td id=\"T_de4b9_row0_col5\" class=\"data row0 col5\" >0.423077</td>\n",
+       "      <td id=\"T_de4b9_row0_col6\" class=\"data row0 col6\" >0.961905</td>\n",
+       "      <td id=\"T_de4b9_row0_col7\" class=\"data row0 col7\" >0.748444</td>\n",
+       "      <td id=\"T_de4b9_row0_col8\" class=\"data row0 col8\" >0.052167</td>\n",
+       "      <td id=\"T_de4b9_row0_col9\" class=\"data row0 col9\" >0.187910</td>\n",
+       "      <td id=\"T_de4b9_row0_col10\" class=\"data row0 col10\" >0.941501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_7360c_row1_col0\" class=\"data row1 col0\" >ratio_raw</td>\n",
-       "      <td id=\"T_7360c_row1_col1\" class=\"data row1 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row1_col2\" class=\"data row1 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row1_col3\" class=\"data row1 col3\" >Ridge</td>\n",
-       "      <td id=\"T_7360c_row1_col4\" class=\"data row1 col4\" >0.743600</td>\n",
-       "      <td id=\"T_7360c_row1_col5\" class=\"data row1 col5\" >0.434066</td>\n",
-       "      <td id=\"T_7360c_row1_col6\" class=\"data row1 col6\" >0.958095</td>\n",
-       "      <td id=\"T_7360c_row1_col7\" class=\"data row1 col7\" >0.740617</td>\n",
-       "      <td id=\"T_7360c_row1_col8\" class=\"data row1 col8\" >0.050920</td>\n",
-       "      <td id=\"T_7360c_row1_col9\" class=\"data row1 col9\" >0.190823</td>\n",
-       "      <td id=\"T_7360c_row1_col10\" class=\"data row1 col10\" >0.939845</td>\n",
+       "      <th id=\"T_de4b9_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_de4b9_row1_col0\" class=\"data row1 col0\" >ratio_raw</td>\n",
+       "      <td id=\"T_de4b9_row1_col1\" class=\"data row1 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row1_col2\" class=\"data row1 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row1_col3\" class=\"data row1 col3\" >Ridge</td>\n",
+       "      <td id=\"T_de4b9_row1_col4\" class=\"data row1 col4\" >0.743600</td>\n",
+       "      <td id=\"T_de4b9_row1_col5\" class=\"data row1 col5\" >0.434066</td>\n",
+       "      <td id=\"T_de4b9_row1_col6\" class=\"data row1 col6\" >0.958095</td>\n",
+       "      <td id=\"T_de4b9_row1_col7\" class=\"data row1 col7\" >0.740617</td>\n",
+       "      <td id=\"T_de4b9_row1_col8\" class=\"data row1 col8\" >0.050920</td>\n",
+       "      <td id=\"T_de4b9_row1_col9\" class=\"data row1 col9\" >0.190823</td>\n",
+       "      <td id=\"T_de4b9_row1_col10\" class=\"data row1 col10\" >0.939845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_7360c_row2_col0\" class=\"data row2 col0\" >ratio_raw</td>\n",
-       "      <td id=\"T_7360c_row2_col1\" class=\"data row2 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row2_col2\" class=\"data row2 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row2_col3\" class=\"data row2 col3\" >ElasticNet</td>\n",
-       "      <td id=\"T_7360c_row2_col4\" class=\"data row2 col4\" >0.743600</td>\n",
-       "      <td id=\"T_7360c_row2_col5\" class=\"data row2 col5\" >0.434066</td>\n",
-       "      <td id=\"T_7360c_row2_col6\" class=\"data row2 col6\" >0.958095</td>\n",
-       "      <td id=\"T_7360c_row2_col7\" class=\"data row2 col7\" >0.740614</td>\n",
-       "      <td id=\"T_7360c_row2_col8\" class=\"data row2 col8\" >0.050921</td>\n",
-       "      <td id=\"T_7360c_row2_col9\" class=\"data row2 col9\" >0.230881</td>\n",
-       "      <td id=\"T_7360c_row2_col10\" class=\"data row2 col10\" >0.897903</td>\n",
+       "      <th id=\"T_de4b9_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_de4b9_row2_col0\" class=\"data row2 col0\" >ratio_raw</td>\n",
+       "      <td id=\"T_de4b9_row2_col1\" class=\"data row2 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row2_col2\" class=\"data row2 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row2_col3\" class=\"data row2 col3\" >ElasticNet</td>\n",
+       "      <td id=\"T_de4b9_row2_col4\" class=\"data row2 col4\" >0.743600</td>\n",
+       "      <td id=\"T_de4b9_row2_col5\" class=\"data row2 col5\" >0.434066</td>\n",
+       "      <td id=\"T_de4b9_row2_col6\" class=\"data row2 col6\" >0.958095</td>\n",
+       "      <td id=\"T_de4b9_row2_col7\" class=\"data row2 col7\" >0.740614</td>\n",
+       "      <td id=\"T_de4b9_row2_col8\" class=\"data row2 col8\" >0.050921</td>\n",
+       "      <td id=\"T_de4b9_row2_col9\" class=\"data row2 col9\" >0.230881</td>\n",
+       "      <td id=\"T_de4b9_row2_col10\" class=\"data row2 col10\" >0.897903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_7360c_row3_col0\" class=\"data row3 col0\" >ratio_in_reads</td>\n",
-       "      <td id=\"T_7360c_row3_col1\" class=\"data row3 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row3_col2\" class=\"data row3 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row3_col3\" class=\"data row3 col3\" >LR</td>\n",
-       "      <td id=\"T_7360c_row3_col4\" class=\"data row3 col4\" >0.705552</td>\n",
-       "      <td id=\"T_7360c_row3_col5\" class=\"data row3 col5\" >0.423077</td>\n",
-       "      <td id=\"T_7360c_row3_col6\" class=\"data row3 col6\" >0.961905</td>\n",
-       "      <td id=\"T_7360c_row3_col7\" class=\"data row3 col7\" >0.748444</td>\n",
-       "      <td id=\"T_7360c_row3_col8\" class=\"data row3 col8\" >0.052167</td>\n",
-       "      <td id=\"T_7360c_row3_col9\" class=\"data row3 col9\" >0.187910</td>\n",
-       "      <td id=\"T_7360c_row3_col10\" class=\"data row3 col10\" >0.941501</td>\n",
+       "      <th id=\"T_de4b9_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_de4b9_row3_col0\" class=\"data row3 col0\" >ratio_in_reads</td>\n",
+       "      <td id=\"T_de4b9_row3_col1\" class=\"data row3 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row3_col2\" class=\"data row3 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row3_col3\" class=\"data row3 col3\" >LR</td>\n",
+       "      <td id=\"T_de4b9_row3_col4\" class=\"data row3 col4\" >0.705552</td>\n",
+       "      <td id=\"T_de4b9_row3_col5\" class=\"data row3 col5\" >0.423077</td>\n",
+       "      <td id=\"T_de4b9_row3_col6\" class=\"data row3 col6\" >0.961905</td>\n",
+       "      <td id=\"T_de4b9_row3_col7\" class=\"data row3 col7\" >0.748444</td>\n",
+       "      <td id=\"T_de4b9_row3_col8\" class=\"data row3 col8\" >0.052167</td>\n",
+       "      <td id=\"T_de4b9_row3_col9\" class=\"data row3 col9\" >0.187910</td>\n",
+       "      <td id=\"T_de4b9_row3_col10\" class=\"data row3 col10\" >0.941501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_7360c_row4_col0\" class=\"data row4 col0\" >ratio_in_reads</td>\n",
-       "      <td id=\"T_7360c_row4_col1\" class=\"data row4 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row4_col2\" class=\"data row4 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row4_col3\" class=\"data row4 col3\" >Ridge</td>\n",
-       "      <td id=\"T_7360c_row4_col4\" class=\"data row4 col4\" >0.743600</td>\n",
-       "      <td id=\"T_7360c_row4_col5\" class=\"data row4 col5\" >0.434066</td>\n",
-       "      <td id=\"T_7360c_row4_col6\" class=\"data row4 col6\" >0.958095</td>\n",
-       "      <td id=\"T_7360c_row4_col7\" class=\"data row4 col7\" >0.740617</td>\n",
-       "      <td id=\"T_7360c_row4_col8\" class=\"data row4 col8\" >0.050920</td>\n",
-       "      <td id=\"T_7360c_row4_col9\" class=\"data row4 col9\" >0.190823</td>\n",
-       "      <td id=\"T_7360c_row4_col10\" class=\"data row4 col10\" >0.939845</td>\n",
+       "      <th id=\"T_de4b9_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_de4b9_row4_col0\" class=\"data row4 col0\" >ratio_in_reads</td>\n",
+       "      <td id=\"T_de4b9_row4_col1\" class=\"data row4 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row4_col2\" class=\"data row4 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row4_col3\" class=\"data row4 col3\" >Ridge</td>\n",
+       "      <td id=\"T_de4b9_row4_col4\" class=\"data row4 col4\" >0.743600</td>\n",
+       "      <td id=\"T_de4b9_row4_col5\" class=\"data row4 col5\" >0.434066</td>\n",
+       "      <td id=\"T_de4b9_row4_col6\" class=\"data row4 col6\" >0.958095</td>\n",
+       "      <td id=\"T_de4b9_row4_col7\" class=\"data row4 col7\" >0.740617</td>\n",
+       "      <td id=\"T_de4b9_row4_col8\" class=\"data row4 col8\" >0.050920</td>\n",
+       "      <td id=\"T_de4b9_row4_col9\" class=\"data row4 col9\" >0.190823</td>\n",
+       "      <td id=\"T_de4b9_row4_col10\" class=\"data row4 col10\" >0.939845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7360c_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_7360c_row5_col0\" class=\"data row5 col0\" >ratio_in_reads</td>\n",
-       "      <td id=\"T_7360c_row5_col1\" class=\"data row5 col1\" >all</td>\n",
-       "      <td id=\"T_7360c_row5_col2\" class=\"data row5 col2\" >PAN_CANCER</td>\n",
-       "      <td id=\"T_7360c_row5_col3\" class=\"data row5 col3\" >ElasticNet</td>\n",
-       "      <td id=\"T_7360c_row5_col4\" class=\"data row5 col4\" >0.743600</td>\n",
-       "      <td id=\"T_7360c_row5_col5\" class=\"data row5 col5\" >0.434066</td>\n",
-       "      <td id=\"T_7360c_row5_col6\" class=\"data row5 col6\" >0.958095</td>\n",
-       "      <td id=\"T_7360c_row5_col7\" class=\"data row5 col7\" >0.740614</td>\n",
-       "      <td id=\"T_7360c_row5_col8\" class=\"data row5 col8\" >0.050921</td>\n",
-       "      <td id=\"T_7360c_row5_col9\" class=\"data row5 col9\" >0.230881</td>\n",
-       "      <td id=\"T_7360c_row5_col10\" class=\"data row5 col10\" >0.897903</td>\n",
+       "      <th id=\"T_de4b9_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_de4b9_row5_col0\" class=\"data row5 col0\" >ratio_in_reads</td>\n",
+       "      <td id=\"T_de4b9_row5_col1\" class=\"data row5 col1\" >all</td>\n",
+       "      <td id=\"T_de4b9_row5_col2\" class=\"data row5 col2\" >PAN_CANCER</td>\n",
+       "      <td id=\"T_de4b9_row5_col3\" class=\"data row5 col3\" >ElasticNet</td>\n",
+       "      <td id=\"T_de4b9_row5_col4\" class=\"data row5 col4\" >0.743600</td>\n",
+       "      <td id=\"T_de4b9_row5_col5\" class=\"data row5 col5\" >0.434066</td>\n",
+       "      <td id=\"T_de4b9_row5_col6\" class=\"data row5 col6\" >0.958095</td>\n",
+       "      <td id=\"T_de4b9_row5_col7\" class=\"data row5 col7\" >0.740614</td>\n",
+       "      <td id=\"T_de4b9_row5_col8\" class=\"data row5 col8\" >0.050921</td>\n",
+       "      <td id=\"T_de4b9_row5_col9\" class=\"data row5 col9\" >0.230881</td>\n",
+       "      <td id=\"T_de4b9_row5_col10\" class=\"data row5 col10\" >0.897903</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7ff58fc58370>"
+       "<pandas.io.formats.style.Styler at 0x7fce6d43f790>"
       ]
      },
      "execution_count": 2,
